--- a/jc.css
+++ b/jc.css
@@ -590,7 +590,7 @@
     display: block;
     width: 50px;
     height: 50px;
-    background: url(/Aktao//images/decipline.png) no-repeat;
+    background: url(/Aktao/images/decipline.png) no-repeat;
 }
 .pag .bd .lis15 span{
 	color: #eae6e6;
