--- a/jc.css
+++ b/jc.css
@@ -308,7 +308,7 @@
     background: url(/Aktao/images/redrectangletwo.png) no-repeat;
 }
 .ul1 #ji.active{
-    background: url(/AKtao/images/redrectangletwo.png) no-repeat;
+    background: url(/Aktao/images/redrectangletwo.pn) no-repeat;
 }
 .ul1 #tong.active{
     background: url(/Aktao/images/redrectangletwo.png) no-repeat;
